complete sandbox with color & Tag

--- a/src/app/components/new-sandbox/new-sandbox.component.html
+++ b/src/app/components/new-sandbox/new-sandbox.component.html
@@ -1,30 +1,63 @@
-   <!-- Add your header selctor here, check your header.componnt.ts file -->
-    <app-header></app-header> 
-<!--copied from sandbox.compoennt.ts file  -->
+<app-header></app-header> 
+    <div class="p-m-6 p-shadow-7 mainClass"> 
+        
+        <h2 class="padding-left-20 p-pt-2">NEW SANDBOX</h2>
+        <form [formGroup]="sandboxForm" (ngSubmit)="createSandbox()">
+    <div class="p-grid">
+        <div class="p-col-4">
+            <div class="padding-left-20">
 
-        <div class="p-grid p-m-6">    
-                <div class="p-col-4">
-                    <p class="label">Project Name</p>
+                    <!--<p class="label">Project Name</p>
                     <input id="no-outline" type="text" pInputText [max]="36"
                     [(ngModel)]="projectName"/>
                     <p class="label">Description</p>
-                    <textarea pInputTextarea [rows]="5" [cols]="30" [(ngModel)]="description"></textarea>
-                </div>
+                    <textarea pInputTextarea [rows]="5" [cols]="30" [(ngModel)]="description"></textarea>-->
+                        
+
+            <mat-form-field class="projectName p-pt-2">
+                <mat-label>Project Name</mat-label>
+                <!--<p class="label">Project Name</p>-->
+                <input matInput #projectName maxlength="36" formControlName="projectName">
+                <mat-hint align="end">{{projectName.value.length}} / 36</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field class="description p-pt-2">
+                <!--<p class="label">Description</p>-->
+                <mat-label>Description</mat-label>
+                <textarea matInput [rows]="7" [cols]="50" #description maxlength="128" formControlName="description"></textarea>
+                <mat-hint align="end">{{description.value.length}} / 128</mat-hint>
+            </mat-form-field>
+            </div> 
+        </div>      
+                
             <div class="p-col-3">
                 <p class="label">Color</p>
                 <div class="p-grid">
-                <p-radioButton name="colorNameSky" value="sky" [(ngModel)]="selectedColor"></p-radioButton>
-                <p-radioButton name="colorNameRed" value="red" [(ngModel)]="selectedColor"></p-radioButton>
-                <p-radioButton name="colorNameOrg" value="orange" [(ngModel)]="selectedColor"></p-radioButton>
-                <p-radioButton name="colorNameGreen" value="green" [(ngModel)]="selectedColor"></p-radioButton>
-                <p-radioButton name="colorNamePurple" value="Purple" [(ngModel)]="selectedColor"></p-radioButton>
+                
+
+                <p-radioButton styleClass="radio-skyblue" name="colorName" value="sky" formControlName="colorName"></p-radioButton>
+                <p-radioButton styleClass="radio-red" name="colorName"  value="red" formControlName="colorName"></p-radioButton>
+                <p-radioButton styleClass="radio-purple" name="colorName" value="purple" formControlName="colorName"></p-radioButton>
+                <p-radioButton styleClass="radio-green" name="colorName" value="green" formControlName="colorName"></p-radioButton>
+                <p-radioButton styleClass="radio-orange" name="colorName" value="orange" formControlName="colorName"></p-radioButton>
                 </div>
 
-                <div>
+                <!--<div>
                     <p class="label tags">Tags</p>
                     <input id="no-outline" type="text" pInputText
                     [(ngModel)]="tagName" placeholder="Type Tags Here"/>
-                </div>
+                    <p-chip label="Loan" [removable]="true" styleClass="p-mt-1 custom-chip"></p-chip>
+                    <p-chip label="Full Suite" [removable]="true" styleClass="p-mt-1 p-ml-2 custom-chip"></p-chip>
+                </div>-->
+
+                <mat-form-field class="tags p-pt-5">
+                    <mat-label>Tags</mat-label>
+                    <input matInput class="p-pt-2" formControlName="tags">
+                </mat-form-field>
+                <p-chip label="Loan" [removable]="true" styleClass="p-mt-1 custom-chip"></p-chip>
+                <p-chip label="Full Suite" [removable]="true" styleClass="p-mt-1 p-ml-2 custom-chip"></p-chip>
+                
+        
                 
             </div>
             <div class="p-col-2">
@@ -39,15 +72,17 @@
                 </div>
                 <div class="p-p-5 p-grid">
                     <p-button  (click)="back()"label="CANCEL" styleClass="p-button-text"></p-button>
-                    <p-button (click)="createSandbox()" label="CREATE SANDBOX"></p-button>
+                    <p-button  label="CREATE SANDBOX" class="p-pl-2" type="submit"></p-button>
                 </div>
             </div>
         
   
     </div>
-    <div class="p-grid p-col-4 p-offset-8">
-        
+        </form>
     </div>
+
+
+
     
         
 
