--- a/src/app/components/new-sandbox/new-sandbox.component.css
+++ b/src/app/components/new-sandbox/new-sandbox.component.css
@@ -1,12 +1,20 @@
 
 /* CSS for New Snad box starts here| Ignore the commented CSS */
+.mainClass {
+    height: 45%;
+}
 
+.padding-left-20 {
+    padding-left: 20px;
+}
 .label {
     font-size: 12px;
     text-align: start;
-    color: black;
+    color:black;
+    font-weight: bold;
+    
 }
-input {
+/*input {
   border-top-style: hidden;
   border-right-style: hidden;
   border-left-style: hidden;
@@ -18,22 +26,49 @@ input {
 }
 .no-outline:focus {
   outline: none;
+}*/
+.projectName {
+    width: 300px;
 }
-
+.description {
+    width: 300px;
+}
+.tags{
+    width: 300px;
+}
+/*CSS for radio button*/
 p-radioButton {
-    
     padding-left: 5px;
 }
 
-/*.p-radiobutton .p-radiobutton-box .p-radiobutton-icon .p-label-focus {
-	color: red !important;
-	background: red !important;
-	border: red !important;
-    border-color: red !important
-}*/
+:host ::ng-deep .radio-skyblue .p-radiobutton-box  {
+  background-color:skyblue; 
+}
 
+:host ::ng-deep .radio-red .p-radiobutton-box  {
+    background-color:red; 
+}
+
+:host ::ng-deep .radio-purple .p-radiobutton-box  {
+  background-color:purple; 
+}
+
+:host ::ng-deep .radio-green .p-radiobutton-box  {
+  background-color:green; 
+}
+
+:host ::ng-deep .radio-orange .p-radiobutton-box  {
+  background-color:orange; 
+}
+/* Radio button changes end*/
 .tags {
     padding-top: 34px;
+}
+
+:host ::ng-deep .p-chip.custom-chip {
+    background: orange;
+    color:black;
+    font-size: 12px;
 }
 
 .disclaimer {
