--- a/src/app/components/new-sandbox/new-sandbox.component.html
+++ b/src/app/components/new-sandbox/new-sandbox.component.html
@@ -6,23 +6,13 @@
     <div class="p-grid">
         <div class="p-col-4">
             <div class="padding-left-20">
-
-                    <!--<p class="label">Project Name</p>
-                    <input id="no-outline" type="text" pInputText [max]="36"
-                    [(ngModel)]="projectName"/>
-                    <p class="label">Description</p>
-                    <textarea pInputTextarea [rows]="5" [cols]="30" [(ngModel)]="description"></textarea>-->
-                        
-
             <mat-form-field class="projectName p-pt-2">
                 <mat-label>Project Name</mat-label>
-                <!--<p class="label">Project Name</p>-->
                 <input matInput #projectName maxlength="36" formControlName="projectName">
                 <mat-hint align="end">{{projectName.value.length}} / 36</mat-hint>
             </mat-form-field>
 
             <mat-form-field class="description p-pt-2">
-                <!--<p class="label">Description</p>-->
                 <mat-label>Description</mat-label>
                 <textarea matInput [rows]="7" [cols]="50" #description maxlength="128" formControlName="description"></textarea>
                 <mat-hint align="end">{{description.value.length}} / 128</mat-hint>
@@ -35,7 +25,7 @@
                 <div class="p-grid">
                 
 
-                <p-radioButton styleClass="radio-skyblue" name="colorName" value="sky" formControlName="colorName"></p-radioButton>
+                <p-radioButton styleClass="radio-skyblue" name="colorName" value="skyblue" formControlName="colorName"></p-radioButton>
                 <p-radioButton styleClass="radio-red" name="colorName"  value="red" formControlName="colorName"></p-radioButton>
                 <p-radioButton styleClass="radio-purple" name="colorName" value="purple" formControlName="colorName"></p-radioButton>
                 <p-radioButton styleClass="radio-green" name="colorName" value="green" formControlName="colorName"></p-radioButton>
@@ -54,17 +44,17 @@
                     <mat-label>Tags</mat-label>
                     <input matInput class="p-pt-2" formControlName="tags">
                 </mat-form-field>
-                <p-chip label="Loan" [removable]="true" styleClass="p-mt-1 custom-chip"></p-chip>
-                <p-chip label="Full Suite" [removable]="true" styleClass="p-mt-1 p-ml-2 custom-chip"></p-chip>
+                <p-chip [removable]="true" styleClass="p-mt-1 custom-chip">{{chipBtn1}}</p-chip>
+                <p-chip [removable]="true" styleClass="p-mt-1 p-ml-2 custom-chip">{{chipBtn2}}</p-chip>
                 
         
                 
             </div>
             <div class="p-col-2">
                 <p class="label">Proejct ID</p>
-                <p [style]="{'text-align':'start'}">123456789</p>
+                <p [style]="{'text-align':'start'}">{{projectId}}</p>
                 <p class="label">Owner</p>
-                <p [style]="{'text-align': 'start'}">Daniel Rothman</p>
+                <p [style]="{'text-align': 'start'}">{{ownerName}}</p>
             </div>
             <div class="p-col-3">
                 <div class="p-text-left disclaimer" >
@@ -72,7 +62,8 @@
                 </div>
                 <div class="p-p-5 p-grid">
                     <p-button  (click)="back()"label="CANCEL" styleClass="p-button-text"></p-button>
-                    <p-button  label="CREATE SANDBOX" class="p-pl-2" type="submit"></p-button>
+                    <p-button  label="CREATE SANDBOX" class="p-pl-2" type="submit"
+                    [disabled]="!sandboxForm.valid"></p-button>
                 </div>
             </div>
         
@@ -80,8 +71,6 @@
     </div>
         </form>
     </div>
-
-
 
     
         
