--- a/src/app/components/new-sandbox/new-sandbox.component.css
+++ b/src/app/components/new-sandbox/new-sandbox.component.css
@@ -1,7 +1,8 @@
 
 /* CSS for New Snad box starts here| Ignore the commented CSS */
 .mainClass {
-    height: 48%;
+   
+    width: 40%;
     margin: 30px;
 }
 
@@ -15,19 +16,7 @@
     font-weight: bold;
     
 }
-/*input {
-  border-top-style: hidden;
-  border-right-style: hidden;
-  border-left-style: hidden;
-  border-bottom-style: groove;
-  background-color: white;
-  border-color: white !important;
-  width: 300px;
 
-}
-.no-outline:focus {
-  outline: none;
-}*/
 .projectName {
     width: 300px;
 }
@@ -62,10 +51,7 @@ p-radioButton {
   background-color:orange; 
 }
 /* Radio button changes end*/
-.tags {
-    /*padding-top: 30px;*/
-    padding-top: 15px;
-}
+
 
 :host ::ng-deep .p-chip.custom-chip {
     background: orange;
@@ -77,7 +63,7 @@ p-radioButton {
     width: 20rem;
     border: 1px solid lightgrey;
     font-size: 12px;
-    border-radius: 14px;
+    /*border-radius: 14px;*/
 }
 
 /*add this css */
@@ -85,4 +71,13 @@ p-radioButton {
     margin-top: 20px;
 }
 
+.padding-right-20 {
+    padding-right: 20px;
+}
+.red {
+    color: red;
+}
+.width-300px {
+    width: 300px;
+}
 /* CSS for New Snad box ends here */
