Tags changes for color & values

--- a/src/app/components/new-sandbox/new-sandbox.component.css
+++ b/src/app/components/new-sandbox/new-sandbox.component.css
@@ -48,10 +48,11 @@ p-radioButton {
 /* Radio button changes end*/
 
 
-:host ::ng-deep .p-chip.custom-chip {
-    background: orange;
-    color:black;
-    font-size: 12px;
+ :host ::ng-deep .tags .p-chips-token {
+    background: orange ;
+    color: black ;
+    font-size: 12px ;
+    margin: 1px;
 }
 
 .disclaimer {
