--- a/src/app/components/new-sandbox/new-sandbox.component.html
+++ b/src/app/components/new-sandbox/new-sandbox.component.html
@@ -2,7 +2,7 @@
 <div class="p-shadow-7 mainClass"> 
     <h2 class="padding-left-20 p-pt-2">{{globalDATA[0].pageHeader}}</h2>
     <form [formGroup]="sandboxForm" (ngSubmit)="createSandbox()">
-        <div class="padding-left-20 padding-right-20 p-col-6 p-grid">
+        <div class="p-pl-5 padding-right-20 p-col-6 p-grid">
             
             <div *ngFor="let field of newSandboxObject.data" class="width-300px  margin-top-20px p-grid">
                 <div [ngSwitch]="field.fieldType">
@@ -23,11 +23,7 @@
                         </div>     
                     </section>
                     <section *ngSwitchCase="'inputChip'">
-                        <!--<input  [type]="field.inputType" pInputText  [maxlength]="field.maxlength" [formControlName]="field.formControlName" [placeholder]="field.placeholder" [ngClass]="field.formControlClass">
-                        <div *ngFor="let chip of field.chips">
-                            <p-chip [removable]="chip.isRemoval" [ngClass]="chip.chipStyle">{{chip.chipName}}</p-chip>
-                        </div>-->
-                        <p-chips [formControlName]="field.formControlName" [max]= "field.maxlength" separator="," styleClass="p-chips"></p-chips>
+                        <p-chips [formControlName]="field.formControlName" [max]= "field.maxlength" separator="," styleClass="tags"></p-chips>
                     </section>
                     <section *ngSwitchCase="'readonly'">
                         <p [style]="field.style">{{field.readonlyValue}}</p>
@@ -35,7 +31,7 @@
                 </div>      
             </div>
         </div>
-        <div class="margin-top-20px">
+        <div class="margin-top-20px padding-left-20">
             <button pButton pRipple type="button" label="CANCEL" class="p-button-secondary" (click)="back()"></button>
             <button pButton pRipple type="submit" label="CREATE SANDBOX" [disabled]="!sandboxForm.valid" class="p-ml-2"></button>  
         </div>
