--- a/src/app/components/create-sandbox/create-sandbox.component.css
+++ b/src/app/components/create-sandbox/create-sandbox.component.css
@@ -1,9 +1,9 @@
 .mainClass {
-    height: 75%
+    
+    width: 40%
 }
 
 .colorBox {
-     
     height: 35px;
 }
 .margin-top-35 {
@@ -24,6 +24,9 @@
     background: orange;
     color:black;
     font-size: 12px;
+    margin: 1px;
+    height: 25px;
+    border-radius: 3px;
 }
 
 .publish {
@@ -32,11 +35,14 @@
 }
 .message {
    font-weight: bold;
-   padding-left: 125px;
+   
 }
 
 .icons {
     font-size: 1rem;
     color: blue;
     padding-left: 5px;
+}
+.word-wrap-break {
+    word-wrap: break-word;
 }
