--- a/src/app/components/create-sandbox/create-sandbox.component.html
+++ b/src/app/components/create-sandbox/create-sandbox.component.html
@@ -1,14 +1,11 @@
 
-<div class="p-m-6 p-shadow-6 mainClass">
+<div class="p-m-5 p-shadow-6 mainClass">
     <div class="p-grid p-col-1 p-ml-5 colorBox" 
     [ngStyle]="{'backgroundColor': colorName}"></div>
-    <div class="p-grid p-ml-5">
-        <div class="p-col-4 p-pt-5">
+    <div class="p-ml-5">
             <h1>{{projectName}}</h1>
-            <h4>{{description}}</h4>
-        </div>
-        <div class="p-grid p-col-4">
-            <div class="p-grid p-pl-6 margin-top-35">
+            <h4 word-wrap-break>{{description}}</h4>
+        <div class="p-grid margin-top-35">
                 <p>Proejct ID:</p>
                 <p class="label">{{projectId}}</p>
                 <p class="p-pl-2">Owner Name:</p>
@@ -16,46 +13,35 @@
                 <span class="p-pl-1">
                     <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded p-button-sm pencil "></button>
                 </span>
-                <span [style]="{'padding-bottom': '50px'}">
-                <p-chip styleClass="custom-chip">{{chipBtn1}}</p-chip>
-                <p-chip styleClass=" p-ml-2 custom-chip">{{chipBtn2}}</p-chip>
-                </span>
-
-            </div>
         </div>
-        <div class="p-grid p-col-2 p-offset-2">
-            <div class="p-grid p-mt-4">
-                <button pButton pRipple type="button" label="PUBLISH" class="p-button-outlined publish"></button>
-                <button pButton pRipple type="button" label="SHARE" class="p-button-outlined publish p-ml-1"></button>
-                
-            </div>
-            
-            <h4 class="message">Not Started</h4> 
-            
-        </div>
-        
+        <div [style]="{'padding-bottom': '50px'}">
+            <p-chip *ngFor="let tag of tags" styleClass="custom-chip">{{tag}}</p-chip>
+         </div>
+         <h4 class="message">Not Started</h4> 
+        <div class="p-grid p-mt-4">
+            <button pButton pRipple type="button" label="PUBLISH" class="p-button-outlined publish"></button>
+            <button pButton pRipple type="button" label="SHARE" class="p-button-outlined publish p-ml-1"></button>
+        </div>  
     </div>
     <p-divider></p-divider>
-    <div class="p-grid p-ml-5">
-        <div class="p-col-7">
+    <div class="p-ml-4">
+        <div>
             <p>Input</p>
-            <textarea rows="7" cols="95" pInputTextarea></textarea>
-            <div class="p-col-2 p-offset-10 ">
+            <textarea rows="6" cols="62" pInputTextarea></textarea>  
+        </div>
+        <div>
+            <p>Output</p>
+            <textarea rows="6" cols="62" pInputTextarea ></textarea>
+        </div>
+        <div class="p-pt-4">
                 <i class="pi pi-refresh" style="font-size: 1rem; color: blue"></i>
                 <i class="pi pi-copy p-pl-3" style="font-size: 1rem; color: blue"></i>
                 <i class="pi pi-cloud-upload p-pl-3" style="font-size: 1rem; color: blue"></i>
-            </div>
-        </div>
-        <div class="p-col-5">
-            <p>Output</p>
-            <textarea rows="7" cols="64" pInputTextarea ></textarea>
         </div>
 
     </div>
-    <div class="p-grid p-jc-end">
-        <div class="p-col-2">
-            <p-button pRipple  label="CANCEL" styleClass="p-button-text" (click)="cancelToNewSandbox()"></p-button>
-            <p-button pRipple  label="SAVE" class="p-pl-3"></p-button>
-        </div>
+    <div class="p-grid p-offset-7">
+        <p-button pRipple  label="CANCEL" styleClass="p-button-text" (click)="cancelToNewSandbox()"></p-button>
+        <p-button pRipple  label="SAVE" class="p-pl-3"></p-button>  
     </div>
 </div>     
